feat: run app after benchmark